--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -165,6 +165,8 @@
 <!ENTITY Ctr_xpinstallui	"Old add-on install window (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Bogmærke-menuknap: panelmenu udseende">
 <!ENTITY Ctr_bmbunsortbm	"Bogmærke-menuknap: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Bogmærke-menuknap: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Bogmærke-menuknap: hide 'unsorted bookmarks'">
 <!ENTITY Ctr_bmbutnotext	"Bogmærke-menuknap: skjul etiket på bogmærkelinje">
 <!ENTITY Ctr_skipprintpr	"Udskriv-knap: Spring vis udskrift over">
 <!ENTITY Ctr_tbconmenu		"Værktøjslinjens genvejsmenu: skjul 'flyt til menu', 'fjern fra værktøjslinje', 'genindlæs/bogmærk alle faneblade' og 'fortryd lukning af faneblade">
@@ -233,6 +235,7 @@
 <!ENTITY Ctr_icopageinfo	"Klik på ikon åbner vinduet 'Sideoplysninger'">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
+<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Placering af menupunkter">
 <!ENTITY Ctr_extrabar		"Yderligere værktøjslinjer">
