--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -165,6 +165,8 @@
 <!ENTITY Ctr_xpinstallui	"Παλιό παράθυρο εγκατάστασης πρόσθετων (προτίμηση about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Μενού κουμπιού-μενού σελιδοδεικτών: εμφάνιση ως αναδυόμενο μενού πίνακα">
 <!ENTITY Ctr_bmbunsortbm	"Μενού κουμπιού-μενού σελιδοδεικτών: υπομενού «Αταξινόμητοι σελιδοδείκτες»">
+<!ENTITY Ctr_bmbviewbmtb	"Μενού κουμπιού-μενού σελιδοδεικτών: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Μενού κουμπιού-μενού σελιδοδεικτών: hide 'unsorted bookmarks'">
 <!ENTITY Ctr_bmbutnotext	"Κουμπί-μενού σελιδοδεικτών: απόκρυψη ετικέτας στην εργαλειοθήκη σελιδοδεικτών">
 <!ENTITY Ctr_skipprintpr	"Κουμπί «Εκτύπωση»: παράκαμψη προεπισκόπησης εκτύπωσης">
 <!ENTITY Ctr_tbconmenu		"Μενού περιεχομένου εργαλειοθήκης: Απόκρυψη «Μετακίνηση στο μενού», «Απομάκρυνση από την εργαλειοθήκη», «Ανανέωση όλων των καρτελών», «Όλες οι καρτέλες σε σελιδοδείκτη…» και «Αναίρεση κλεισίματος καρτέλας»">
@@ -233,6 +235,7 @@
 <!ENTITY Ctr_icopageinfo	"Άνοιγμα παραθύρου «Πληροφορίες σελίδας» με κλικ στο ικονίδιο">
 <!ENTITY Ctr_lbsbsize		"Προσαρμοσμένο εύρος γραμμών διευθύνσεων και αναζήτησης">
 <!ENTITY Ctr_searchbar		"Γραμμή αναζήτησης">
+<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Θέση στοιχείων μενού της εργαλειοθήκης μενού">
 <!ENTITY Ctr_extrabar		"Επιπρόσθετες εργαλειοθήκες">
