--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -165,6 +165,8 @@
 <!ENTITY Ctr_xpinstallui	"Old add-on install window (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Bookmarks menu button: panel menu popup appearance">
 <!ENTITY Ctr_bmbunsortbm	"Bookmarks menu button: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Bookmarks menu button: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Bookmarks menu button: hide 'unsorted bookmarks'">
 <!ENTITY Ctr_bmbutnotext	"Bookmarks menu button: hide label on bookmarks bar">
 <!ENTITY Ctr_skipprintpr	"Print button: skip print preview">
 <!ENTITY Ctr_tbconmenu		"Toolbar context menu: hide 'move to menu', 'remove from toolbar', 'reload/bookmark all tabs' and 'undo close tab'">
@@ -233,6 +235,7 @@
 <!ENTITY Ctr_icopageinfo	"Clicking on icon opens 'page info' window">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
+<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Menu items position">
 <!ENTITY Ctr_extrabar		"Additional Toolbars">
