--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -165,6 +165,8 @@
 <!ENTITY Ctr_xpinstallui	"Vana lisade paigaldamise aken (about:config eelistus)">
 <!ENTITY Ctr_bmbutpanelm	"Järjehoidjate menüü nupp: paneelimenüü välimus">
 <!ENTITY Ctr_bmbunsortbm	"Järjehoidjate menüü nupp: alammenüü 'Sortimata järjehoidjad'">
+<!ENTITY Ctr_bmbviewbmtb	"Järjehoidjate menüü nupp: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Järjehoidjate menüü nupp: hide 'unsorted bookmarks'">
 <!ENTITY Ctr_bmbutnotext	"Järjehoidjate menüü nupp: peida järjehoidjate ribal sildid">
 <!ENTITY Ctr_skipprintpr	"Printimise nupp: jäta vahele printimise eelvaade">
 <!ENTITY Ctr_tbconmenu		"Tööriistariba kontekstimenüü: peida kirjed 'liiguta menüüsse', 'eemalda tööriistamenüült', 'laadi uuesti/lisa järjehoidjatesse kõik kaardid' ja 'võta kaardi sulgemine tagasi'">
@@ -233,6 +235,7 @@
 <!ENTITY Ctr_icopageinfo	"Ikoonil klõpsamine avab akna 'veebilehe teave'">
 <!ENTITY Ctr_lbsbsize		"Aadressiriba ja otsinguriba kohandatud laius">
 <!ENTITY Ctr_searchbar		"Otsinguriba">
+<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Menüükirjete asukoht">
 <!ENTITY Ctr_extrabar		"Lisa-tööriistaribad">
