--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -165,6 +165,8 @@
 <!ENTITY Ctr_xpinstallui	"Stile classico per la finestra di installazione dei componenti aggiuntivi (about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Menu del pulsante segnalibri: aspetto del menu a pannello">
 <!ENTITY Ctr_bmbunsortbm	"Menu del pulsante segnalibri: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Menu del pulsante segnalibri: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Menu del pulsante segnalibri: hide 'unsorted bookmarks'">
 <!ENTITY Ctr_bmbutnotext	"Menu del pulsante segnalibri: nascondi etichetta della barra dei segnalibri">
 <!ENTITY Ctr_skipprintpr	"Pulsante stampa: salta l’anteprima di stampa">
 <!ENTITY Ctr_tbconmenu		"Menu contestuale della barra degli strumenti: nascondi 'Sposta nel menu', 'Rimuovi dalla barra degli strumenti', 'Ricarica/ tutte le schede nei segnalibri' e 'Riapri scheda chiusa'">
@@ -233,6 +235,7 @@
 <!ENTITY Ctr_icopageinfo	"Cliccando sull’icona vengono visualizzate le 'Informazioni sulla pagina'">
 <!ENTITY Ctr_lbsbsize		"Larghezza personalizzata per la barra degli indirizzi e di ricerca">
 <!ENTITY Ctr_searchbar		"Barra di ricerca">
+<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Posizione delle voci del menu">
 <!ENTITY Ctr_extrabar		"Barre degli strumenti aggiuntive">
