--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -165,6 +165,8 @@
 <!ENTITY Ctr_xpinstallui	"Staro okno za namestitev dodatkov (nastavitev about:config)">
 <!ENTITY Ctr_bmbutpanelm	"Gumb menija zaznamkov: videz ploščastega menija">
 <!ENTITY Ctr_bmbunsortbm	"Gumb menija zaznamkov: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Gumb menija zaznamkov: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Gumb menija zaznamkov: hide 'unsorted bookmarks'">
 <!ENTITY Ctr_bmbutnotext	"Gumb menija zaznamkov: skrij oznako na vrstici zaznamkov">
 <!ENTITY Ctr_skipprintpr	"Gumb Natisni: preskoči predogled tiskanja">
 <!ENTITY Ctr_tbconmenu		"Vsebinski meni orodne vrstice: skrij 'Premakni v meni', 'Odstrani iz orodne vrstice', 'Ponovno naloži vse zavihke', 'Dodaj vse zavihke med zaznamke' in 'Ponovno odpri zavihek'">
@@ -233,6 +235,7 @@
 <!ENTITY Ctr_icopageinfo	"Klik na ikono odpre okno 'Podatkov o strani'">
 <!ENTITY Ctr_lbsbsize		"Prilagodljiva širina naslovne in iskalne vrstice">
 <!ENTITY Ctr_searchbar		"Iskalna vrstica">
+<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Položaj predmetov menija">
 <!ENTITY Ctr_extrabar		"Dodatne orodne vrstice">
