--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -165,6 +165,8 @@
 <!ENTITY Ctr_xpinstallui	"Old add-on install window (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Yer imleri menü düğmesi: panel menu görünümü">
 <!ENTITY Ctr_bmbunsortbm	"Yer imleri menü düğmesi: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Yer imleri menü düğmesi: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Yer imleri menü düğmesi: hide 'unsorted bookmarks'">
 <!ENTITY Ctr_bmbutnotext	"Yer imleri menü düğmesi: bar üzerinde etiketi gizle">
 <!ENTITY Ctr_skipprintpr	"Yazdır Butonu: baskı önizlemeyi atla">
 <!ENTITY Ctr_tbconmenu		"Araç Çubuğu sağtık menüsü: hide 'move to menu', 'remove from toolbar', 'reload/bookmark all tabs' ve 'undo close tab'">
@@ -233,6 +235,7 @@
 <!ENTITY Ctr_icopageinfo	"İkonlara tıklamak 'sayfa bilgisi' görüntüler">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
+<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Menu öge pozisyonu">
 <!ENTITY Ctr_extrabar		"Ek Araç Çubuğu">
