--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -165,6 +165,8 @@
 <!ENTITY Ctr_xpinstallui	"使用傳統彈出式的附加元件安裝視窗 (about:config)">
 <!ENTITY Ctr_bmbutpanelm	"書籤選單按鈕: 書籤選單使用和面板選單同風格的外觀">
 <!ENTITY Ctr_bmbunsortbm	"書籤選單按鈕: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"書籤選單按鈕: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"書籤選單按鈕: hide 'unsorted bookmarks'">
 <!ENTITY Ctr_bmbutnotext	"書籤選單按鈕: 當此按鈕位於書籤列時，隱藏按鈕文字標籤">
 <!ENTITY Ctr_skipprintpr	"列印按鈕: 跳過列印預覽">
 <!ENTITY Ctr_tbconmenu		"工具列右鍵選單: 隱藏 「移動至選單」、「自工具列移除」、「重新載入所有分頁」、「將所有分頁加入書籤」和「復原已關閉分頁」項目">
@@ -233,6 +235,7 @@
 <!ENTITY Ctr_icopageinfo	"按下圖示，則開啟「頁面資訊」視窗">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
+<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"選單列併入">
 <!ENTITY Ctr_extrabar		"新增工具列">
