--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -165,6 +165,8 @@
 <!ENTITY Ctr_xpinstallui	"Менеджер додатків: старе вікно встановлення додатків (about:config preference)">
 <!ENTITY Ctr_bmbutpanelm	"Кнопка меню закладок: вигляд меню панелі">
 <!ENTITY Ctr_bmbunsortbm	"Кнопка меню закладок: субменю «несортованих закладок»">
+<!ENTITY Ctr_bmbviewbmtb	"Кнопка меню закладок: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Кнопка меню закладок: hide 'unsorted bookmarks'">
 <!ENTITY Ctr_bmbutnotext	"Кнопка меню закладок: приховати ярлик на панелі закладок">
 <!ENTITY Ctr_skipprintpr	"Кнопка «Друк»: пропустити передогляд друку">
 <!ENTITY Ctr_tbconmenu		"Контекстне меню панелей: приховати «Перенести в меню», «Вилучити з панелі», «Оновити/закласти всі вкладки» та «Повернути закриту вкладку»">
@@ -233,6 +235,7 @@
 <!ENTITY Ctr_icopageinfo	"Клік на іконку відкриває інформаційне вікно">
 <!ENTITY Ctr_lbsbsize		"Налаштовувана ширина для панелей рядку адреси та пошуку">
 <!ENTITY Ctr_searchbar		"Панель пошуку">
+<!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Позиція пунктів меню">
 <!ENTITY Ctr_extrabar		"Додаткові панелі інструментів">
