--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -163,11 +163,12 @@
 <!ENTITY Ctr_am_compact2	"Compact view +">
 <!ENTITY Ctr_addonversion	"Tilføjelseshåndteringens liste med tilføjelser: vis tilføjelsesversion">
 <!ENTITY Ctr_xpinstallui	"Old add-on install window (about:config preference)">
-<!ENTITY Ctr_bmbutpanelm	"Bogmærke-menuknap: panelmenu udseende">
-<!ENTITY Ctr_bmbunsortbm	"Bogmærke-menuknap: 'unsorted bookmarks' submenu">
-<!ENTITY Ctr_bmbviewbmtb	"Bogmærke-menuknap: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Bogmærke-menuknap: hide 'unsorted bookmarks'">
-<!ENTITY Ctr_bmbutnotext	"Bogmærke-menuknap: skjul etiket på bogmærkelinje">
+<!ENTITY Ctr_bmbutton		"Bogmærke-menuknap">
+<!ENTITY Ctr_bmbutpanelm	"Popup: panelmenu udseende">
+<!ENTITY Ctr_bmbunsortbm	"Popup: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutnotext	"Skjul etiket på bogmærkelinje">
 <!ENTITY Ctr_skipprintpr	"Udskriv-knap: Spring vis udskrift over">
 <!ENTITY Ctr_tbconmenu		"Værktøjslinjens genvejsmenu: skjul 'flyt til menu', 'fjern fra værktøjslinje', 'genindlæs/bogmærk alle faneblade' og 'fortryd lukning af faneblade">
 <!ENTITY Ctr_noresizerxp	"Skjul tilpasning af størrelse (Windows XP)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_icopageinfo	"Klik på ikon åbner vinduet 'Sideoplysninger'">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
+<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Placering af menupunkter">
