--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -114,7 +114,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Verstecke Chronik-Aufklappmenü bei gedrückter Maustaste">
 <!ENTITY Ctr_bf_space		"Reduziere Zwischenraum (falls möglich)">
 <!ENTITY Ctr_noconicons		"Seitenkontextmenü: ersetze Symbole durch Namen (Zurück, Vor...)">
-<!ENTITY Ctr_prefpage		"Einstellungsseite">
+<!ENTITY Ctr_prefpage		"Einstellungsseite / -fenster">
 <!ENTITY Ctr_altoptionsd	"Standard-Darstellung">
 <!ENTITY Ctr_altoptionsp	"Alternative Darstellung">
 <!ENTITY Ctr_altoptionsw	"Einstellungsseite in einem Fenster öffnen">
@@ -163,11 +163,12 @@
 <!ENTITY Ctr_am_compact2	"Kompakte Darstellung +">
 <!ENTITY Ctr_addonversion	"Add-on 'Übersicht': Versionsnummer von Add-ons anzeigen">
 <!ENTITY Ctr_xpinstallui	"Altes Add-on Installationsfenster (about:config Einstellung)">
-<!ENTITY Ctr_bmbutpanelm	"Lesezeichen-Menüschaltfläche: 'Panel-Aufklappmenü'-Darstellung">
-<!ENTITY Ctr_bmbunsortbm	"Lesezeichen-Menüschaltfläche: Untermenü 'unsortierte Lesezeichen'">
-<!ENTITY Ctr_bmbviewbmtb	"Lesezeichen-Menüschaltfläche: zeige 'Lesezeichen-Symbolleiste anzeigen'">
-<!ENTITY Ctr_bmbnounsort	"Lesezeichen-Menüschaltfläche: verstecke 'unsortierte Lesezeichen'">
-<!ENTITY Ctr_bmbutnotext	"Lesezeichen-Menüschaltfläche: Text auf der Lesezeichenleiste verstecken">
+<!ENTITY Ctr_bmbutton		"Lesezeichen-Menüschaltfläche">
+<!ENTITY Ctr_bmbutpanelm	"Aufklappmenü: 'Panel'-Darstellung">
+<!ENTITY Ctr_bmbunsortbm	"Aufklappmenü: 'Unsortierte Lesezeichen' Untermenü">
+<!ENTITY Ctr_bmbviewbmtb	"Aufklappmenü: 'Lesezeichen-Symbolleiste anzeigen'">
+<!ENTITY Ctr_bmbnounsort	"Aufklappmenü: verstecke 'Unsortierte Lesezeichen'">
+<!ENTITY Ctr_bmbutnotext	"Text auf der Lesezeichenleiste verstecken">
 <!ENTITY Ctr_skipprintpr	"Drucken-Schaltfläche: Druckvorschau überspringen">
 <!ENTITY Ctr_tbconmenu		"Leisten-Kontextmenü: Verstecke 'In Menü verschieben', 'Aus Symbolleiste entfernen', 'Alle Tabs neu laden', 'Lesezeichen für alle Tabs hinzufügen...' und 'Geschlossenen Tab wiederherstellen'">
 <!ENTITY Ctr_noresizerxp	"'Resizer' verstecken (Windows XP/2000)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_icopageinfo	"Ein Klick auf das Symbol öffnet das 'Seiteninfo'-Fenster">
 <!ENTITY Ctr_lbsbsize		"Benutzerdefinierte Breite für die Adressleiste und die Suchleiste">
 <!ENTITY Ctr_searchbar		"Suchleiste">
+<!ENTITY Ctr_lbsugresi		"Bildlaufleiste aus dem Aufklappmenü entfernen">
 <!ENTITY Ctr_lbsugres		"Anzahl der Ergebnisse im Aufklappmenü (about:config Einstellung)">
 
 <!ENTITY Ctr_menubar_items	"Position der Menüeinträge">
@@ -285,7 +287,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Einstellung hat Auswirkung auf alle Leisten in der 'Slim'-Darstellung der Erweiterung 'Beyond Australis'.">
 <!ENTITY Ctr_nonavborder	"Oberen Leistenrand hinzufügen/anzeigen">
 <!ENTITY Ctr_nonavtbborder	"Obere Leisten: Leistenränder nicht anzeigen">
-<!ENTITY Ctr_hidesbclose	"Seitenleisten: Verstecke 'Schließen'-Schaltfläche">
+<!ENTITY Ctr_hidesbclose	"Seitenleisten: verstecke 'Schließen'-Schaltfläche">
 <!ENTITY Ctr_notextshadow	"Leisten: Schatten für Leistentext (und Tabtext) nicht anzeigen">
 <!ENTITY Ctr_chevronfix		"Navigationsleiste: Doppelpfeil am Ende der Leiste nicht anzeigen">
 <!ENTITY Ctr_tbsep_winc		"Obere Leisten: weitere Leistentrennlinien">
