--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -163,10 +163,11 @@
 <!ENTITY Ctr_am_compact2	"Συμπαγής προβολή +">
 <!ENTITY Ctr_addonversion	"Λίστες πρόσθετων: εμφάνιση έκδοσης πρόσθετου">
 <!ENTITY Ctr_xpinstallui	"Παλιό παράθυρο εγκατάστασης πρόσθετων (προτίμηση about:config)">
-<!ENTITY Ctr_bmbutpanelm	"Μενού κουμπιού-μενού σελιδοδεικτών: εμφάνιση ως αναδυόμενο μενού πίνακα">
-<!ENTITY Ctr_bmbunsortbm	"Μενού κουμπιού-μενού σελιδοδεικτών: υπομενού «Αταξινόμητοι σελιδοδείκτες»">
-<!ENTITY Ctr_bmbviewbmtb	"Μενού κουμπιού-μενού σελιδοδεικτών: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Μενού κουμπιού-μενού σελιδοδεικτών: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutton		"Μενού κουμπιού-μενού σελιδοδεικτών">
+<!ENTITY Ctr_bmbutpanelm	"Εμφάνιση ως αναδυόμενο μενού πίνακα">
+<!ENTITY Ctr_bmbunsortbm	"Popup: υπομενού «Αταξινόμητοι σελιδοδείκτες»">
+<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
 <!ENTITY Ctr_bmbutnotext	"Κουμπί-μενού σελιδοδεικτών: απόκρυψη ετικέτας στην εργαλειοθήκη σελιδοδεικτών">
 <!ENTITY Ctr_skipprintpr	"Κουμπί «Εκτύπωση»: παράκαμψη προεπισκόπησης εκτύπωσης">
 <!ENTITY Ctr_tbconmenu		"Μενού περιεχομένου εργαλειοθήκης: Απόκρυψη «Μετακίνηση στο μενού», «Απομάκρυνση από την εργαλειοθήκη», «Ανανέωση όλων των καρτελών», «Όλες οι καρτέλες σε σελιδοδείκτη…» και «Αναίρεση κλεισίματος καρτέλας»">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_icopageinfo	"Άνοιγμα παραθύρου «Πληροφορίες σελίδας» με κλικ στο ικονίδιο">
 <!ENTITY Ctr_lbsbsize		"Προσαρμοσμένο εύρος γραμμών διευθύνσεων και αναζήτησης">
 <!ENTITY Ctr_searchbar		"Γραμμή αναζήτησης">
+<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Θέση στοιχείων μενού της εργαλειοθήκης μενού">
