--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -163,11 +163,12 @@
 <!ENTITY Ctr_am_compact2	"Vue compacte +">
 <!ENTITY Ctr_addonversion	"Listes de modules : afficher la version du module">
 <!ENTITY Ctr_xpinstallui	"Acienne fenêtre d'installation de modules (préférence about:config)">
-<!ENTITY Ctr_bmbutpanelm	"Bouton Marque-pages : apparence Panneau menu">
-<!ENTITY Ctr_bmbunsortbm	"Bouton Marque-pages : 'unsorted bookmarks' submenu">
-<!ENTITY Ctr_bmbviewbmtb	"Bouton Marque-pages : show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Bouton Marque-pages : hide 'unsorted bookmarks'">
-<!ENTITY Ctr_bmbutnotext	"Bouton Marque-pages : cacher 'Marque-pages' sur la barre personnelle">
+<!ENTITY Ctr_bmbutton		"Bouton Marque-pages">
+<!ENTITY Ctr_bmbutpanelm	"Popup : apparence Panneau menu">
+<!ENTITY Ctr_bmbunsortbm	"Popup : 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Popup : show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Popup : hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutnotext	"Cacher 'Marque-pages' sur la barre personnelle">
 <!ENTITY Ctr_skipprintpr	"Bouton Imprimer : enlever l'aperçu avant impression">
 <!ENTITY Ctr_tbconmenu		"Menu contextuel des barres d'outils : enlever 'Déplacer vers le menu', 'Retirer de la barre d'outils', 'Actualiser/Marquer tous les onglets' et  'Annuler la fermeture de l'onglet'">
 <!ENTITY Ctr_noresizerxp	"Cacher le redimensionnement (Windows XP)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_icopageinfo	"Un clic sur l'icône ouvre la 'page info'">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
+<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Position de la barre de menus">
