--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -163,11 +163,12 @@
 <!ENTITY Ctr_am_compact2	"Компактный вид +">
 <!ENTITY Ctr_addonversion	"Список дополнений: показывать версии дополнений">
 <!ENTITY Ctr_xpinstallui	"Старое окно установки дополнений (настройка about:config)">
-<!ENTITY Ctr_bmbutpanelm	"Кнопка меню закладок: вид панели меню">
-<!ENTITY Ctr_bmbunsortbm	"Кнопка меню закладок: 'unsorted bookmarks' submenu">
-<!ENTITY Ctr_bmbviewbmtb	"Кнопка меню закладок: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Кнопка меню закладок: hide 'unsorted bookmarks'">
-<!ENTITY Ctr_bmbutnotext	"Кнопка меню закладок: скрыть текст на панели закладок">
+<!ENTITY Ctr_bmbutton		"Кнопка меню закладок">
+<!ENTITY Ctr_bmbutpanelm	"Popup: вид панели меню">
+<!ENTITY Ctr_bmbunsortbm	"Popup: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutnotext	"Скрыть текст на панели закладок">
 <!ENTITY Ctr_skipprintpr	"Кнопка печати: пропускать предварительный просмотр">
 <!ENTITY Ctr_tbconmenu		"Контекстное меню панели инструментов: скрыть «Переместить в меню», «Удалить с панели инструментов», «Обновить/В закладки все вкладки», «Восстановить закрытую вкладку»">
 <!ENTITY Ctr_noresizerxp	"Скрыть «Индикатор изменения размера» (Windows XP/2000)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_icopageinfo	"Нажатие на иконку открывает «Информация о странице»">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
+<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Позиция пунктов меню">
