--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -163,11 +163,12 @@
 <!ENTITY Ctr_am_compact2	"Kompaktní vzhled +">
 <!ENTITY Ctr_addonversion	"Seznam Správce rozšíření: zobrazit verzi rozšíření">
 <!ENTITY Ctr_xpinstallui	"Správce rozšíření: starý vzhled (předvolba about:config)">
-<!ENTITY Ctr_bmbutpanelm	"Tlačítko menu záložek: panel menu vzhledu">
-<!ENTITY Ctr_bmbunsortbm	"Tlačítko menu záložek: 'unsorted bookmarks' submenu">
-<!ENTITY Ctr_bmbviewbmtb	"Tlačítko menu záložek: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Tlačítko menu záložek: hide 'unsorted bookmarks'">
-<!ENTITY Ctr_bmbutnotext	"Tlačítko menu záložek: skrýt návěští na liště záložek">
+<!ENTITY Ctr_bmbutton		"Tlačítko menu záložek">
+<!ENTITY Ctr_bmbutpanelm	"Popup: panel menu vzhledu">
+<!ENTITY Ctr_bmbunsortbm	"Popup: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutnotext	"Skrýt návěští na liště záložek">
 <!ENTITY Ctr_skipprintpr	"Tlačítko tisku: přeskočit náhled tisku">
 <!ENTITY Ctr_tbconmenu		"Kontextové menu položek lišty: skrýt 'přesunout do nabídky', 'odebrat z lišty', 'obnovit/přidat do záložek všechny panely' a 'obnovit zavřený panel'">
 <!ENTITY Ctr_noresizerxp	"Skrýt Resizer (Windows XP)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_icopageinfo	"Klik na ikonu otevře okno 'informace o stránce'">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
+<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Umístění menu">
