--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -163,11 +163,12 @@
 <!ENTITY Ctr_am_compact2	"Vista compacta +">
 <!ENTITY Ctr_addonversion	"Mostrar la versión del complemento">
 <!ENTITY Ctr_xpinstallui	"Antiguo cuadro de instalación de complementos (about:config>>xpinstall.customConfirmationUI)">
-<!ENTITY Ctr_bmbutpanelm	"Botón de menú Marcadores: Estilo de menú emergente de panel">
-<!ENTITY Ctr_bmbunsortbm	"Botón de menú Marcadores: Submenú 'Marcadores no ordenados'">
-<!ENTITY Ctr_bmbviewbmtb	"Botón de menú Marcadores: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Botón de menú Marcadores: hide 'unsorted bookmarks'">
-<!ENTITY Ctr_bmbutnotext	"Botón de menú Marcadores: Ocultar etiqueta en la barra de marcadores">
+<!ENTITY Ctr_bmbutton		"Botón de menú Marcadores">
+<!ENTITY Ctr_bmbutpanelm	"Popup: Estilo de menú emergente de panel">
+<!ENTITY Ctr_bmbunsortbm	"Popup: Submenú 'Marcadores no ordenados'">
+<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutnotext	"Ocultar etiqueta en la barra de marcadores">
 <!ENTITY Ctr_skipprintpr	"Botón Imprimir: Omitir previsualización de la impresión">
 <!ENTITY Ctr_tbconmenu		"Menú contextual de barra de herramientas: Ocultar 'Mover al menú', 'Eliminar de la barra de herramientas', 'Recargar todas las pestañas', 'Añadir pestañas a marcadores...' y 'Deshacer el cierre de la última pestaña'">
 <!ENTITY Ctr_noresizerxp	"Ocultar redimensionador (Windows XP)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_icopageinfo	"Hacer clic en el icono abre la ventana 'Información de la página'">
 <!ENTITY Ctr_lbsbsize		"Ancho personalizado para barra de direcciones y recuadro de búsqueda">
 <!ENTITY Ctr_searchbar		"Recuadro de búsqueda">
+<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Posición de los elementos del menú">
