--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -163,11 +163,12 @@
 <!ENTITY Ctr_am_compact2	"Compact view +">
 <!ENTITY Ctr_addonversion	"Add-on lists: show add-on version">
 <!ENTITY Ctr_xpinstallui	"Old add-on install window (about:config preference)">
-<!ENTITY Ctr_bmbutpanelm	"Bookmarks menu button: panel menu appearance">
-<!ENTITY Ctr_bmbunsortbm	"Bookmarks menu button: 'unsorted bookmarks' submenu">
-<!ENTITY Ctr_bmbviewbmtb	"Bookmarks menu button: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Bookmarks menu button: hide 'unsorted bookmarks'">
-<!ENTITY Ctr_bmbutnotext	"Bookmarks menu button: hide label on bookmarks bar">
+<!ENTITY Ctr_bmbutton		"Bookmarks menu button">
+<!ENTITY Ctr_bmbutpanelm	"Popup: panel menu appearance">
+<!ENTITY Ctr_bmbunsortbm	"Popup: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutnotext	"Hide label on bookmarks bar">
 <!ENTITY Ctr_skipprintpr	"Print button: skip print preview">
 <!ENTITY Ctr_tbconmenu		"Toolbar context menu: hide 'move to menu', 'remove from toolbar', 'reload/bookmark all tabs' and 'undo close tab'">
 <!ENTITY Ctr_noresizerxp	"Ocultar o Redimensionamento (Windows XP)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_icopageinfo	"Clicar no Ícone Abre a Janela 'Infs. da Página'">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
+<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Posição dos Ítens do Menu">
