--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -163,11 +163,12 @@
 <!ENTITY Ctr_am_compact2	"Компактний вигляд +">
 <!ENTITY Ctr_addonversion	"Список додатків у Менеджері додатків: показати версію додатка">
 <!ENTITY Ctr_xpinstallui	"Менеджер додатків: старе вікно встановлення додатків (about:config preference)">
-<!ENTITY Ctr_bmbutpanelm	"Кнопка меню закладок: вигляд меню панелі">
-<!ENTITY Ctr_bmbunsortbm	"Кнопка меню закладок: субменю «несортованих закладок»">
-<!ENTITY Ctr_bmbviewbmtb	"Кнопка меню закладок: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"Кнопка меню закладок: hide 'unsorted bookmarks'">
-<!ENTITY Ctr_bmbutnotext	"Кнопка меню закладок: приховати ярлик на панелі закладок">
+<!ENTITY Ctr_bmbutton		"Кнопка меню закладок">
+<!ENTITY Ctr_bmbutpanelm	"Popup: вигляд меню панелі">
+<!ENTITY Ctr_bmbunsortbm	"Popup: субменю «несортованих закладок»">
+<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutnotext	"Приховати ярлик на панелі закладок">
 <!ENTITY Ctr_skipprintpr	"Кнопка «Друк»: пропустити передогляд друку">
 <!ENTITY Ctr_tbconmenu		"Контекстне меню панелей: приховати «Перенести в меню», «Вилучити з панелі», «Оновити/закласти всі вкладки» та «Повернути закриту вкладку»">
 <!ENTITY Ctr_noresizerxp	"Приховати «Індикатор зміни розміру» (Windows XP)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_icopageinfo	"Клік на іконку відкриває інформаційне вікно">
 <!ENTITY Ctr_lbsbsize		"Налаштовувана ширина для панелей рядку адреси та пошуку">
 <!ENTITY Ctr_searchbar		"Панель пошуку">
+<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"Позиція пунктів меню">
