--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -163,11 +163,12 @@
 <!ENTITY Ctr_am_compact2	"紧凑视图 +">
 <!ENTITY Ctr_addonversion	"附加组件页面: 显示附加组件版本">
 <!ENTITY Ctr_xpinstallui	"附加组件管理器: 旧式附加组件安装窗口(about:config 选项)">
-<!ENTITY Ctr_bmbutpanelm	"书签菜单按钮: 面板式菜单外观">
-<!ENTITY Ctr_bmbunsortbm	"书签菜单按钮: 'unsorted bookmarks' submenu">
-<!ENTITY Ctr_bmbviewbmtb	"书签菜单按钮: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"书签菜单按钮: hide 'unsorted bookmarks'">
-<!ENTITY Ctr_bmbutnotext	"书签菜单按钮: 隐藏书签工具栏上的文本标签">
+<!ENTITY Ctr_bmbutton		"书签菜单按钮">
+<!ENTITY Ctr_bmbutpanelm	"Popup: 面板式菜单外观">
+<!ENTITY Ctr_bmbunsortbm	"Popup: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutnotext	"隐藏书签工具栏上的文本标签">
 <!ENTITY Ctr_skipprintpr	"打印按钮: 跳过打印预览">
 <!ENTITY Ctr_tbconmenu		"工具栏右键菜单: 隐藏 “移动到菜单”, “从工具栏移除”, “重新载入所有标签页/将全部标签页加为书签” 与 “恢复关闭的标签页”">
 <!ENTITY Ctr_noresizerxp	"隐藏调整大小控件 (Windows XP)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_icopageinfo	"点击图标打开“页面信息”窗口">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
+<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"菜单项目位置">
