--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -163,11 +163,12 @@
 <!ENTITY Ctr_am_compact2	"Compact view +">
 <!ENTITY Ctr_addonversion	"附加元件清單: 顯示附加元件版本號">
 <!ENTITY Ctr_xpinstallui	"使用傳統彈出式的附加元件安裝視窗 (about:config)">
-<!ENTITY Ctr_bmbutpanelm	"書籤選單按鈕: 書籤選單使用和面板選單同風格的外觀">
-<!ENTITY Ctr_bmbunsortbm	"書籤選單按鈕: 'unsorted bookmarks' submenu">
-<!ENTITY Ctr_bmbviewbmtb	"書籤選單按鈕: show 'View Toolbar'">
-<!ENTITY Ctr_bmbnounsort	"書籤選單按鈕: hide 'unsorted bookmarks'">
-<!ENTITY Ctr_bmbutnotext	"書籤選單按鈕: 當此按鈕位於書籤列時，隱藏按鈕文字標籤">
+<!ENTITY Ctr_bmbutton		"書籤選單按鈕">
+<!ENTITY Ctr_bmbutpanelm	"Popup: 書籤選單使用和面板選單同風格的外觀">
+<!ENTITY Ctr_bmbunsortbm	"Popup: 'unsorted bookmarks' submenu">
+<!ENTITY Ctr_bmbviewbmtb	"Popup: show 'View Toolbar'">
+<!ENTITY Ctr_bmbnounsort	"Popup: hide 'unsorted bookmarks'">
+<!ENTITY Ctr_bmbutnotext	"當此按鈕位於書籤列時，隱藏按鈕文字標籤">
 <!ENTITY Ctr_skipprintpr	"列印按鈕: 跳過列印預覽">
 <!ENTITY Ctr_tbconmenu		"工具列右鍵選單: 隱藏 「移動至選單」、「自工具列移除」、「重新載入所有分頁」、「將所有分頁加入書籤」和「復原已關閉分頁」項目">
 <!ENTITY Ctr_noresizerxp	"隱藏視窗大小調整器 (Windows XP)">
@@ -235,6 +236,7 @@
 <!ENTITY Ctr_icopageinfo	"按下圖示，則開啟「頁面資訊」視窗">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
+<!ENTITY Ctr_lbsugresi		"Remove scrollbar from suggestions popup">
 <!ENTITY Ctr_lbsugres		"Number of results in suggestions popup (about:config preference)">
 
 <!ENTITY Ctr_menubar_items	"選單列併入">
